doc generated for auth controller
